# rust-2021-building-rest-apis-actix-web

./: .gitignore  Cargo.toml  Dockerfile  readme.md
assets/: duckair.db
backend/: .dockerignore  Cargo.toml
backend/src/: database.rs  endpoints.rs  main.rs  schema.rs
frontend/js/: client.js
src/: database.rs  endpoints.rs  main.rs  schema.rs
