[package]
name = "rust-2021-building-rest-apis-actix-web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = { version = "4.8.0" }
config = "0.14.0"
env_logger = "0.11.3"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
uuid = { version = "1.9.1", features = ["v4"] }
