[package]
name = "rust-2021-building-rest-apis-actix-web"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "flight-plan"
path = "src/main.rs"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.0"
actix-web = { version = "4.8.0", features = ["openssl"] }
actix-web-httpauth = "0.8.2"
config = "0.14.0"
env_logger = "0.11.3"
openssl = "0.10.64"
openssl-sys = "0.9.102"
rusqlite = { version = "0.31.0", features = ["bundled"] }
rustls = "0.23.10"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
uuid = { version = "1.9.1", features = ["v4"] }
